--- a/catering.html
+++ b/catering.html
@@ -51,9 +51,41 @@
     <!-- End of NavBar Header -->
 
     <!-- Start of Content -->
+
+    <!-- Catering and box start -->
     <div>
-        
+        <div class="container-fluid d-flex justify-content-center caterBgWhite ">
+            <h1> Catering</h1>
+        </div>
     </div>
+    <!-- Catering and box end -->
+
+    <!-- Hero-Image start -->
+        <div class="caterHero-image  "> </div>
+    <!-- Hero-Image end -->
+
+    <!-- 'Our Catering Services' start -->
+    <div class="container-fluid d-flex flex-row ">
+        <div class="container">
+            <img src="/imgs/cateringMaine.jpg" alt="">
+        </div>
+        <div class="container crtWhite">
+            <h2>Our Catering Services</h2>
+            <p>Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin sed libero enim sed faucibus turpis in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit amet. Ultricies tristique nulla aliquet enim tortor at auctor urna. Purus faucibus ornare suspendisse sed. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Sed cras ornare arcu dui vivamus arcu felis. Consectetur lorem donec massa sapien faucibus et molestie ac. Cum sociis natoque penatibus et magnis dis parturient. Ut faucibus pulvinar elementum integer enim. Vel risus commodo viverra maecenas accumsan. Nec dui nunc mattis enim ut. <br> Posuere lorem ipsum dolor sit amet. Sed odio morbi quis commodo odio aenean. Tortor posuere ac ut consequat semper viverra nam libero. Tellus elementum sagittis vitae et leo duis ut. Egestas quis ipsum suspendisse ultrices gravida. Tempor commodo ullamcorper a lacus vestibulum sed arcu non odio. Auctor augue mauris augue neque gravida in fermentum et sollicitudin. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Tristique senectus et netus et. Dolor sit amet consectetur adipiscing elit ut aliquam. Erat nam at lectus urna duis convallis convallis tellus. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices.</p>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <img src="/imgs/catering1.jpg" alt="">
+        <img src="/imgs/catering2.jpg" alt="">
+        <img src="/imgs/catering3.jpg" alt="">
+    </div>
+
+
+
+    <!-- 'Our Catering Services' end -->
+
+
     <!-- End of Content -->
 
 
