--- a/photos.html
+++ b/photos.html
@@ -51,9 +51,63 @@
     <!-- End of NavBar Header -->
 
     <!-- Start of Content -->
+    <!-- Start of h1 -->
     <div>
-        
+        <div class="container-fluid d-flex justify-content-center photorBgWhite ">
+            <h1> Photos</h1>
+        </div>
     </div>
+    <!-- end of h1 -->
+
+    <!-- start of photos -->
+    <div></div>
+    <div class=" row">
+        <div class="col">
+            <img src="/imgs/photo01.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo02.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo03.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo04.jpg" alt="">
+        </div>
+</div>
+
+<div class=" row">
+        <div class="col">
+            <img src="/imgs/photo05.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo06.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo07.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo08.jpg" alt="">
+        </div>
+    </div>
+
+    <div class=" row">
+        <div class="col">
+            <img src="/imgs/photo09.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo10.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo11.jpg" alt="">
+        </div>
+        <div class="col">
+            <img src="/imgs/photo12.jpg" alt="">
+        </div>
+    </div>
+
+
+
     <!-- End of Content -->
 
 
